add location to search

--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -98,7 +98,35 @@
         <div id="listings-column" class="nine wide column"></div>
         <div  class="six wide column">
           <div id="preview-container">
-            <div class="ui search">
+              <div class="search">
+                  <div class="left-side">
+                    <input id="request" type="text" placeholder="Title, category, ..." class="field request">
+                    <div class="field-wrapper">
+                        <span class="field-title find">Find</span>
+                    </div>
+                    <!-- <ul class="left-side__sublist">
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink restaraunts first">Dermatologist</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink bar">Hair Care Salons</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink coffee">Hair Loss / Hair Care Products & Treatments</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink delivery">Hair Replacement & Hair Systems</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink takeout">Laser Therapy</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink reservations">Medical / Hair Transplants</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink reservations">Medical Hair Restoration</a></li>
+                      <li class="left-side__subitem"><a href="#" class="left-side__sublink reservations">Wigs / Extensions & Hair Additions</a></li>
+                    </ul> -->
+                  </div>
+                  <div class="right-side">
+                    <input id="location" type="text" class="field location">            
+                    <div class="field-wrapper">
+                      <span class="field-title near">Near</span>
+                    </div>
+                    <!-- <ul class="right-side__sublist">
+                      <li class="right-side__subitem"><a  class="right-side__sublink current">Current Location</a></li>
+                    </ul> -->
+                  </div>
+                  <a id="search-button" class="search_button">Search</a>
+                </div>
+            <!-- <div class="ui search">
               <div
                 style="width: 100%; margin-top: 3rem;"
                 class="ui large action input"
@@ -112,7 +140,7 @@
                   Search
                 </button>
               </div>
-            </div>
+            </div> -->
           </div>
           <div
             style="margin-top: .5rem; position: relative;"
