--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -126,6 +126,11 @@
                   </div>
                   <a id="search-button" class="search_button">Search</a>
                 </div>
+                <div class="ui icon buttons">
+                    <button id="40233" class="ui button distanceButtons">25 mi.</button>
+                    <button id="80467" class="ui active button distanceButtons">50 mi.</button>
+                    <button id="160934" class="ui button distanceButtons">100 mi.</button>
+                  </div>
             <!-- <div class="ui search">
               <div
                 style="width: 100%; margin-top: 3rem;"
