--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -130,6 +130,7 @@
                     <button id="40233" class="ui button distanceButtons">25 mi.</button>
                     <button id="80467" class="ui active button distanceButtons">50 mi.</button>
                     <button id="160934" class="ui button distanceButtons">100 mi.</button>
+                    <button id="40007000" class="ui button distanceButtons">All</button>
                   </div>
             <!-- <div class="ui search">
               <div
@@ -154,6 +155,7 @@
             <div id="map"></div>
             <div id="demo"></div>
           </div>
+          <div id="page-numbers"></div>
         </div>
       </div>
     </div>
