no free claim, slashed prices

--- a/public/billing__new.html
+++ b/public/billing__new.html
@@ -86,7 +86,8 @@
             </div>
       <div class="centered row">
         <div id="title-column" class="fifteen wide center aligned column">
-            <p class="cta-title" >Pick a Payment Plan</p>
+            <p class="cta-title" style="margin-bottom: .5rem;" >Pick a Payment Plan</p>
+            <p style="font-family: Lato; font-weight: 400; color: #696969; margin-top: 0px; font-size: 20px;" >(Prices have been slashed as aid during COVID-19 pandemic)</p>
         </div>
         <div id="free-col" class="three wide column">
             <div class="ui grid">
@@ -190,7 +191,8 @@
                 <div class="ui grid">
                     <div id="free-header-col" class="sixteen wide column">
                         <p class="plan-header" >Light</p>
-                        <p class="price-text" >$29.99</p>
+                        <p class="price-text" style="text-decoration: line-through;" >$29.99</p>
+                        <p class="price-text" style="margin-top: 0px;" >$19.99</p>
                     </div>
                     <div class="sixteen wide column">
                             <div id="free-list" class="ui middle aligned divided list">
@@ -288,7 +290,8 @@
                     <div class="ui grid">
                         <div id="free-header-col" class="sixteen wide column">
                             <p class="plan-header" >Standard</p>
-                            <p class="price-text" >$49.99</p>
+                            <p class="price-text" style="text-decoration: line-through;" >$49.99</p>
+                            <p class="price-text" style="margin-top: 0px;" >$39.99</p>
                         </div>
                         <div class="sixteen wide column">
                                 <div id="free-list" class="ui middle aligned divided list">
@@ -386,7 +389,8 @@
                         <div class="ui grid">
                             <div id="free-header-col" class="sixteen wide column">
                                 <p class="plan-header" >Premium</p>
-                                <p class="price-text" >$79.99</p>
+                                <p class="price-text" style="text-decoration: line-through;" >$79.99</p>
+                                <p class="price-text" style="margin-top: 0px;" >$49.99</p>
                             </div>
                             <div class="sixteen wide column">
                                     <div id="free-list" class="ui middle aligned divided list">
