--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/dashboard.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/nav.css" />
 <body>
     <div class="row" id="top-menu-row">
         <div class="ui grid" id="landing-grid">
