--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -37,8 +37,10 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Raleway:100,400,500,700,800,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/nav.css">
+
     <link rel="stylesheet" type="text/css" href="./css/sign-in.css" />
+
   </head>
   <body>
       <div class="row" id="top-menu-row">
