--- a/public/admin.listing.html
+++ b/public/admin.listing.html
@@ -45,7 +45,7 @@
     />
     <!-- <link rel="stylesheet" type="text/css" href="./css/styles.css" /> -->
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/nav.css" />
     <link rel="stylesheet" type="text/css" href="./css/admin.listing.css" />
   </head>
 
