listing tiers on lsiting page

--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="ui icon buttons">
                     <button id="40233" class="ui button distanceButtons">25 mi.</button>
-                    <button id="80467" class="ui active button distanceButtons">50 mi.</button>
+                    <button id="80467" class="ui button distanceButtons">50 mi.</button>
                     <button id="160934" class="ui button distanceButtons">100 mi.</button>
                     <button id="40007000" class="ui button distanceButtons">All</button>
                   </div>
