--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -29,8 +29,9 @@
   rel="stylesheet"
 />
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./css/styles.css" />
-<link rel="stylesheet" type="text/css" href="./css/search.listings.css" />
+<!-- <link rel="stylesheet" type="text/css" href="./css/search.listings.css" /> -->
+<link rel="stylesheet" type="text/css" href="./css/nav.css" />
+
 <link rel="stylesheet" href="./css/form.pages.css" />
 </head>
 
