--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -102,6 +102,7 @@
                         <input class="main input_text" id="tagline" name="tagline" type="text">
                         <i class="edit icon"></i>
                     </div >
+                    <div id="tagline-upgrade"></div>
                 </div>
             <div class="field">
                 <label class="categoryAppend" style="margin-top: 2rem;" id="labels-1">Category: </label>
@@ -493,6 +494,7 @@
                     <!-- <div id='opening-hours-field' style="display: inline-block; width: 50%;" class="fields"></div>
                     <div id='closing-hours-field' style="display: inline-block; width: 50%; " class="fields"></div> -->
                 </div> 
+                <div class="hours-upgrade"></div>
                 <!-- <div class="field">
                     <div class="ui toggle checkbox">
                         <input type="checkbox" tabindex="0" name="24hours" class="hidden">
@@ -512,36 +514,42 @@
                         <input class="social_media input_text" id="instagram" name="instagram" type="text" >
                         <i class="large instagram icon"></i>
                     </div>
+                    <div class="sm-upgrade"></div>
                 </div>
                 <div class="sm-field field">
                     <div id="facebook-div" style="margin-top: 1rem;" class="ui  left icon input">
                         <input class="social_media input_text" id="facebook" name="facebook" type="text" >
                         <i class="large facebook icon"></i>
                     </div>
+                    <div class="sm-upgrade"></div>
                 </div>
                 <div class="sm-field field">
                     <div id="twitter-div" style="margin-top: 1rem;" class="ui  left icon input">
                         <input class="social_media input_text" id="twitter" name="twitter" type="text" >
                         <i class="large twitter icon"></i>
                     </div>
+                    <div class="sm-upgrade"></div>
                 </div>
                 <div class="sm-field field">
                     <div id="linkedIn-div" style="margin-top: 1rem;" class="ui  left icon input">
                         <input class="social_media input_text" id="linkedin" name="linkedin" type="text">
                         <i class="large linkedin icon"></i>
                     </div>
+                    <div class="sm-upgrade"></div>
                 </div>
                 <div class="sm-field field">
                         <div id="youtube-div" style="margin-top: 1rem;" class="ui  left icon input">
                             <input class="social_media input_text" id="youtube" name="youtube" type="text" >
                             <i class="large youtube icon"></i>
                         </div>
+                        <div class="sm-upgrade"></div>
                     </div>
                     <div class="sm-field field">
                       <div id="youtubeChannel-div" style="margin-top: 1rem;" class="ui  left icon input">
                           <input class="social_media input_text" id="youtube-channel" name="youtube-channel" type="text" >
                           <i class="large youtube icon"></i>
                       </div>
+                      <div class="sm-upgrade"></div>
                   </div>
                 
     
@@ -592,21 +600,27 @@
                         <label>Answer: </label>
                         <textarea class="answer  input_text" id="answer0" name="faq-answer-0"></textarea>
                         <button style="display: none;" class="ui button faqSubmit" id="faq0-button">Update</button>
+                        <div class="faq-upgrade"></div>
                     </div>
+
                     <div style="display: none;" class="field" id="1faq" style="display: block;">
                         <label>FAQ #2<label style="display: block;">Question: </label>
                         <input class="faq input_text" id="faq1" name="faq-question-1">
                         <label>Answer: </label>
                         <textarea class="answer input_text" id="answer1" name="faq-answer-1"></textarea>
                         <button style="display: none;" class="ui button faqSubmit" id="faq1-button">Update</button>
+                        <div class="faq-upgrade"></div>
                     </div>
+
                     <div style="display: none;" class="field" id="2faq" style="display: block;">
                         <label>FAQ #3<label style="display: block;">Question: </label>
                         <input class="faq input_text" id="faq2" name="faq-question-2">
                         <label>Answer: </label>
                         <textarea class="answer input_text" id="answer2" name="faq-answer-2"></textarea>
                         <button style="display: none;" class="ui button faqSubmit" id="faq2-button">Update</button>
+                        <div class="faq-upgrade"></div>
                     </div>
+
                 </div>
                 <div style="display: none;" id="submit-button" class="ui button submit-button">Update Listing</div>
             <div id="image-size-modal" class="ui basic modal">
