--- a/public/index.html
+++ b/public/index.html
@@ -58,18 +58,18 @@
           <div style="padding: 1rem;" class="six wide computer six wide mobile middle aligned column">
             <p id="ha-title">Hair Authority Directory</p>
           </div>
-          <div class="three wide column"></div>
+          <div class="three wide computer two wide mobile column"></div>
           <!-- dashboard column  -->
-          <div id="dashboard-column" class="two wide column"></div>
+          <div id="dashboard-column" class="two wide computer one wide mobile column"></div>
           <!-- sign in column  -->
-          <div id="sign-in-column" class="two wide column">
+          <div id="sign-in-column" class="two wide computer three wide mobile column">
             <!-- sign in button  -->
             <div id="sign-in-button">
               <p class="top-button" id="sign-in">Sign In</p>
             </div>
           </div>
           <!-- list business column TITLE REGISTER COLUMN  -->
-          <div id="register-column" class="two wide column">
+          <div id="register-column" class="two wide computer four wide mobile column">
           <!-- list business button  -->
             <div
               id="listBusiness-button"
@@ -398,7 +398,7 @@
         >
           <img
             id="business-mag-img"
-            class="ui small image"
+            class="ui huge image"
             src="https://ha-images-02.s3-us-west-1.amazonaws.com/ha_cutout-1.png"
           />
         </div>
@@ -461,13 +461,13 @@
               </p>
               <ul>
                 <li class="cta-text">
-                    No ads and no distractions. Just you and the people who want to learn about you.
+                    Be seen.
                 </li>
                 <li class="cta-text">
-                    Showcase your special skills.
+                    Be informative.
                 </li>
                 <li class="cta-text">
-                    Stand out from the crowd.
+                    Be trusted.
                 </li>
               </ul>
               <!-- <p class="cta-text">
