--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -639,6 +639,7 @@
                   <div id="subscription-segment" class="ui raised segment">
                       <p class="logo-header" style="font-size: 25px; color: #696969;">Subscription Info</p>
                   </div>
+                  <button class="ui fluid button updateSub" >Change Subscription</button>
                   <div class="ui raised segment" id="map-container">
                       <div id="map"></div>
                   </div>
